# tienda-chavalos

./: .gitignore  CHANGELOG_EXPOSICION_LAN.md  CHECKLIST_FINAL.md  CONFIRMACION_ENTREGA.md  Configurar-LAN.ps1  EMPAQUETADO_PRODUCCION.md  ENTREGA_GENERADOR_PDF.md  ESTRUCTURA_ARCHIVOS_PRODUCTOS.md  GENERADOR_PDF_CHANGELOG.md  GENERADOR_PDF_NOTA_VENTA.md  GUIA_DESPLIEGUE.md  GUIA_DEV_LINUX.md  GUIA_EXPOSICION_LAN.md  GUIA_GIT.md  GUIA_RAPIDA_EJECUCION.md  GUIA_VISUAL_PRODUCTOS.md  INDICE_DOCUMENTACION.md  INDICE_DOCUMENTACION_LAN.md  Iniciar-LAN.ps1  MANIFEST_FASE2.md  README_LAN.md  README_LAN_INICIO.md  REDISENO_MOBILE_COMPLETADO.md  RESUMEN_FINAL.txt  RESUMEN_REDISENO_PRODUCTOS.md  SOLUCION_STEPPER_CARRITO.md  TESTING_RAPIDO_FASE2.md  export-chavalos-files.ps1  package-lock.json  patch-backend.ps1  prepare-installer.ps1  witch master
Base_de_datos/: GUIA_RESPALDOS.md
ChavalosServerApp/: .gitignore  COMANDOS_VALIDACION.md  COMPLETADO.md  DOCUMENTACION_COMPLETA.md  FIX_BUG_CRITICO_PRODUCCION.md  FIX_BUILD_RUNTIME_COMPLETADO.md  GUIA_BUILD.md  GUIA_COMPILACION.md  GUIA_VERSIONES.md  INDICE_DOCUMENTACION.md  INSTRUCCIONES_MAMA.md  PREREQUISITOS.md  PROYECTO_RESUMEN.md  QUICKSTART.md  README.md  VERIFICACION_RESOURCES.md  build.ps1  create-icons.ps1  dev.ps1  generar-iconos.ps1  index.html  package-lock.json  package.json  setup-icons.ps1  setup.ps1  validate-prebuild.ps1  (+1 more)
ChavalosServerApp/src-tauri/: Cargo.toml  tauri.conf.json
ChavalosServerApp/src-tauri/capabilities/: default.json
ChavalosServerApp/src-tauri/icons/: .gitkeep  icon.icns
ChavalosServerApp/src-tauri/nsis/: installer-hooks.nsh
ChavalosServerApp/src-tauri/resources/: server-launcher.ps1
ChavalosServerApp/src-tauri/resources/bundle/project/backend/Autenticacion/: auth.ts
ChavalosServerApp/src-tauri/resources/bundle/project/backend/Validaciones/: stock.ts
ChavalosServerApp/src-tauri/resources/bundle/project/web-server/: server.js
ChavalosServerApp/src-tauri/src/: diag_terminal.rs  lib.rs  main.rs
(+205 files in other folders)
