[package]
name = "chavalos-server"
version = "1.4.1"
description = "Servidor de gestión Ferretería Chavalos"
authors = ["Chavalos"]
edition = "2021"

[lib]
name = "chavalos_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"       # Optimizar por tamaño (usa menos RAM al compilar)
lto = false           # Desactivar Link-Time Optimization (ahorra mucha RAM)
codegen-units = 4     # Más unidades = menos RAM por unidad
strip = "debuginfo"   # Quitar info de debug del binario
